# say_it_see_it

./: .gitignore  LICENSE  MVP.py  MVP3.py  README.md  designer.py  graph_builder.py  main.py  nodes.py  pyproject.toml  runner.py  test.py  utils.py
LayoutPrompter/: app.py  main.py
LayoutPrompter/.gradio/flagged/: dataset1.csv
LayoutPrompter/dataset/: README.md
LayoutPrompter/notebooks/: constraint_explicit.ipynb  content_aware.ipynb  text_to_layout.ipynb
LayoutPrompter/src/: contents.py  parsing.py  preprocess.py  ranker.py  selection.py  serialization.py  transforms.py  utilities.py  visualization.py
generated_html/: output.html
lagacy/: MVP2.py
nodes/: __init__.py  _layout.py  background.py  common.py  designer.py  drawer.py  layout.py
notebooks/: 02-LangGraph-ChatBot.ipynb  03-LangGraph-Agent.ipynb  design.ipynb  design_agent.ipynb  designer.ipynb  html_parser.ipynb
notebooks/designer/: designer.ipynb  designer_prompt.yaml
notebooks/generated_html/: 머신러닝_기초.html  인공지능의_미래.html  자연어_처리_기술.html
prompts/: drawer_prompt.yaml  layout_prompt.yaml
tools/: background.py  color.py  layout.py
