[project]
name = "say-it-see-it"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "clip",
    "dotenv>=0.9.9",
    "gradio>=5.27.0",
    "ipykernel>=6.29.5",
    "langchain-openai>=0.3.16",
    "langchain-teddynote>=0.3.45",
    "openai>=1.76.0",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "setuptools>=79.0.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
